shut off particles

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <!-- Owl Js -->
     <script src="js/owl.carousel.min.js"></script>
 
-    <!-- Particles Js -->
+    <!-- Particles Js
     <script src="js/particles.js"></script>
-    <script src="js/particles.app.js"></script>
+    <script src="js/particles.app.js"></script>-->
 
     <!-- MFP JS -->
     <script src="js/jquery.magnific-popup.min.js"></script>
