--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <meta name="robots" content="noindex,nofollow">
+    <meta name="author" content="Webonzer" />
 
     <!-- Site Title -->
-    <title>E P H O R</title>
+    <title>E P H O R - Intelligent Collaboration</title>
 
     <!-- Site favicon -->
     <link rel="shortcut icon" href="images/favicon.svg">
@@ -37,7 +37,31 @@
 
 <body>
 
-
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg fixed-top custom-nav sticky">
+        <div class="container">
+            <!-- LOGO -->
+            <a class="logo navbar-brand" href="index.html">
+                <img src="images/logos/ephor.svg" alt="" class="img-fluid logo-light">
+                <img src="images/logos/ephor-dk.svg" alt="" class="img-fluid logo-dark">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="mdi mdi-menu"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto navbar-center" id="main_nav">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about" class="nav-link">About</a>
+                    </li>
+                </ul>
+                <a href="https://app.ephor.ai" class="btn btn-sm btn-custom navbar-btn">Sign Into EPHOR</a>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
 
     <div data-bs-spy="scroll" data-bs-target="#main_nav" data-bs-offset="71" class="scrollspy-example" data-bs-smooth-scroll="true">
 
@@ -50,17 +74,13 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="text-white text-center">
-                                    <img src="images/logos/ephor-full.svg" class="img img-fluid mb-4" style="width: 400px;">
-                                    <h1 class="header_title mx-auto">One AI Platform, Endless Possibilities</h1>
-                                    <div class="mb-3 mt-5 text-center">
-                                        <h4 class="text-white">
-                                            Ephor is the ultimate AI collaboration tool. It centralizes everything: AI models, documents & interactions in one application. It makes you and your team faster, smarter, and more effective, and replaces your use of all AI models individually.
-                                        </h4>
-                                    </div>
-                                    <div class="header_btn mb-5">
-                                        <a href="https://app.ephor.ai" class="btn btn-custom mt-4">Sign-Up Today!</a>
-                                    </div>
+                                    <img src="images/logos/ephor-e-animation.gif" class="img img-fluid mb-3" style="width: 165px;">
+                                    <h2 class="header_title mx-auto">One AI Platform, Endless Possibilities</h2>
                                     
+                                    <div class="video-container">
+                                        <iframe src="https://player.vimeo.com/video/1032084265?h=21a306eb33&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="EPHOR - AI Collaboration"></iframe>
+                                    </div>
+                                    <script src="https://player.vimeo.com/api/player.js"></script>
                                 </div>
                             </div>
                         </div>
@@ -70,6 +90,60 @@
         </section>
         <!--End Home-->
 
+        <!-- Start About -->
+        <section class="section mt-5" id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="text-center sec_title">
+                            <h4 class="text-capitalize font-weight-bold mb-1">About EPHOR</h4>
+                            <!--<div class="main-title-border mb-1">
+                                <img src="images/logos/ephor-mark-E.svg" class="img img-fluid mb-1" style="width: 20px;">
+                            </div>-->
+                            <p class="sec_subtitle mx-auto text-muted mb-0">EPHOR is the ultimate AI collaboration tool. It centralizes everything: AI models, documents & interactions in one application. It makes you and your team faster, smarter, and more effective, and replaces your use of all AI models individually.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-lg-4">
+                        <div class="about_boxes mt-3 text-center rounded p-4">
+                            <div class="about_icon">
+                                <i class="mdi mdi-airplay text-custom"></i>
+                            </div>
+                            <div class="about_content mt-3">
+                                <h5 class="font-weight-bold">All-in-One</h5>
+                                <p class="text-muted mb-0 mt-3">Ephor supports multiple language models (Open AI 4o, Llama 405B, Perplexity, Sonnet 3.5, Gemini 1.5 Pro), optimizing for speed and cost.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="about_boxes mt-3 text-center rounded p-4">
+                            <div class="about_icon">
+                                <i class="mdi mdi-share-variant text-custom"></i>
+                            </div>
+                            <div class="about_content mt-3">
+                                <h5 class="font-weight-bold">Bring Your Team</h5>
+                                <p class="text-muted mb-0 mt-3">Ephor offers project-centric team collaboration features, enabling better knowledge sharing and context retention across teams.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="about_boxes mt-3 text-center rounded p-4">
+                            <div class="about_icon">
+                                <i class="mdi mdi-monitor-cellphone text-custom"></i>
+                            </div>
+                            <div class="about_content mt-3">
+                                <h5 class="font-weight-bold">Upload Library</h5>
+                                <p class="text-muted mb-0 mt-3">Ephor centralizes documents and team interactions, simplifying document management and ensuring smooth collaboration.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End About -->
+
 
         <!-- Start Contact/Footer -->
         <section class="section bg-contact-color" id="started">
@@ -78,8 +152,8 @@
                 <div class="row pt-3">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <img src="images/logos/ephor-mark-E.svg" class="img img-fluid mb-3" style="width: 50px;">
-                            <p class="copy-rights mb-0">2024 &copy; EPHOR. All rights reserved. <a href="pdfs/ephor-privacy-policy.pdf" target="_blank">Privacy Policy</a> | <a href="pdfs/ephor-terms-conditions.pdf" target="_blank">Terms &amp; Conditions</a></p>
+                            <img src="images/logos/ephor-e-animation.gif" class="img img-fluid mb-3" style="width: 75px;">
+                            <p class="copy-rights mb-0">&copy;2024 EPHOR. All rights reserved. <a href="ephor-privacy-policy.html" target="_blank">Privacy Policy</a> | <a href="ephor-terms-conditions.html" target="_blank">Terms &amp; Conditions</a></p>
                         </div>
                     </div>
                 </div>
@@ -99,10 +173,6 @@
 
     <!-- Owl Js -->
     <script src="js/owl.carousel.min.js"></script>
-
-    <!-- Particles Js
-    <script src="js/particles.js"></script>
-    <script src="js/particles.app.js"></script>-->
 
     <!-- MFP JS -->
     <script src="js/jquery.magnific-popup.min.js"></script>
