--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                                     <img src="images/logos/ephor-e-animation.gif" class="img img-fluid mb-3" style="width: 165px;">
                                     <h2 class="header_title mx-auto">One AI Platform, Endless Possibilities</h2>
                                     
-                                    <div class="video-container">
+                                    <!--<div class="video-container">
                                         <iframe src="https://player.vimeo.com/video/1032084265?h=21a306eb33&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="EPHOR - AI Collaboration"></iframe>
                                     </div>
-                                    <script src="https://player.vimeo.com/api/player.js"></script>
+                                    <script src="https://player.vimeo.com/api/player.js"></script>-->
                                 </div>
                             </div>
                         </div>
