privacy policy updated

--- a/ephor-privacy-policy.html
+++ b/ephor-privacy-policy.html
@@ -307,7 +307,7 @@
                         </ul>
 
                         <h3>7. Children</h3>
-                        <p>Our Services are not directed towards, and we do not knowingly collect, use, disclose, sell, or share any information about, children under the age of 18. If you become aware that a child under the age of 18 has provided any personal data to us while using our Services, please email us at privacy@ephor.ai and we will investigate the matter and, if appropriate, delete the personal data.</p>
+                        <p>Because of the nature of our business, our services are not designed to appeal to minors under the age of 13. We do not knowingly attempt to solicit or receive any information from anyone under the age of 13 (or other age as required by local law) without authorization.  If you are a parent or guardian and you are aware that your child has provided us with personal data without authorization, please contact us immediately. If we learn that we have collected any personal data in violation of applicable law, we will promptly take steps to delete such information and terminate the child’s account.</p>
 
                         <h3>8. Supplemental Disclosures for Residents of Canada</h3>
                         <p>These supplemental disclosures contain additional information relevant to residents of Canada. This content should be read in conjunction with the rest of our Privacy Policy. In case of conflict between our Privacy Policy and these supplemental disclosures, the supplemental disclosures shall prevail in relation to residents of Canada.</p>
