--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="text-white text-center">
-                                    <img src="images/logos/ephor-e-animation.gif" class="img img-fluid mb-3" style="width: 165px;">
+                                    <img src="images/logos/ephor-mark2-transparent.png" class="img img-fluid mb-3" style="width: 185px;">
                                     <h2 class="header_title mx-auto mb-5">One AI Platform, Endless Possibilities</h2>
                                     
                                     <!--<div class="video-container">
@@ -152,7 +152,7 @@
                 <div class="row pt-3">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <img src="images/logos/ephor-e-animation.gif" class="img img-fluid mb-3" style="width: 75px;">
+                            <img src="images/logos/ephor-mark2-transparent.png" class="img img-fluid mb-3" style="width: 100px;">
                             <p class="copy-rights mb-0">&copy;2024 EPHOR. All rights reserved. <a href="ephor-privacy-policy.html" target="_blank">Privacy Policy</a> | <a href="ephor-terms-conditions.html" target="_blank">Terms &amp; Conditions</a></p>
                         </div>
                     </div>
@@ -173,6 +173,10 @@
 
     <!-- Owl Js -->
     <script src="js/owl.carousel.min.js"></script>
+
+    <!-- Particles Js -->
+    <script src="js/particles.js"></script>
+    <script src="js/particles.app.js"></script>
 
     <!-- MFP JS -->
     <script src="js/jquery.magnific-popup.min.js"></script>
