privacy policy updates

--- a/ephor-privacy-policy.html
+++ b/ephor-privacy-policy.html
@@ -152,7 +152,7 @@
 
                         <p>We will not use your Inputs or Outputs to train our models, unless: (1) your conversations are flagged for Trust &amp; Safety review (in which case we may use or analyze them to improve our ability to detect and enforce our , including training models for use by our Trust and Safety team, consistent with Ephor's safety mission), or (2) you've explicitly reported the materials to us (for example via our feedback mechanisms), or (3) you've otherwise explicitly opted in to the use of your Inputs and Outputs for training purposes.</p>
 
-                        <p>Google Workspace APIs are NOT used to develop, improve, or train generalized/non-personalized AI and/or ML models.</p>
+                        <p>Google Workspace APIs are NOT used to develop, improve, or train generalized/non-personalized AI and/or ML models. We use encryption at rest and in transit to protect your information submitted through the app.</p>
                         
                         <p>We use your personal data for the following purposes:</p>
 
